// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Access/> should render properly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Access management
      </h1>
    </div>
    <div
      class="pageContainer"
    >
      <div
        class="contentWrapper"
      >
        <form
          class=""
        >
          <h4
            class="mb-2"
          >
            Single Sign-On (SSO)
          </h4>
          <p>
            SSO allows agents to access Gorgias using their Google or Microsoft accounts. Once you enable a SSO method, a respective button will appear on the log-in page.
          </p>
          <div
            class="mb-4"
          >
            <div
              class="mb-2"
            >
              <label
                aria-checked="false"
                class="ui-label-label-a11c label"
                for="toggle-button-1"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="toggle-button-1"
                  name="toggle-button-1"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                <img
                  alt="Google logo"
                  class="ml-3 mr-2"
                  src="test-file-stub"
                  style="height: 1.4em;"
                />
                <b>
                  Google
                   SSO
                </b>
              </label>
            </div>
          </div>
          <div
            class="mb-2"
          >
            <label
              aria-checked="false"
              class="ui-label-label-a11c label"
              for="toggle-button-2"
              role="switch"
            >
              <input
                class="input"
                disabled=""
                id="toggle-button-2"
                name="toggle-button-2"
                type="checkbox"
              />
              <div
                class="slider"
              />
              <img
                alt="Microsoft 365 logo"
                class="ml-3 mr-2"
                src="test-file-stub"
                style="height: 1.4em;"
              />
              <b>
                Microsoft 365
                 SSO
              </b>
            </label>
          </div>
          <div
            class="mt-4"
            data-name="box"
            style="flex-direction: column; display: flex;"
          >
            <div
              data-name="box"
              style="flex-direction: column; display: flex;"
            />
          </div>
          <h4
            class="mt-5 mb-2"
          >
            Auto-join helpdesk
          </h4>
          <p
            class="mb-1"
          >
            Allows people with email addresses in the approved email domains to use the link below to sign up.
          </p>
          <p>
            <a
              href="https://acme.gorgias.com/signup"
            >
              https://acme.gorgias.com/signup
            </a>
          </p>
          <div
            class="mb-3"
          >
            <div>
              <label
                aria-checked="false"
                class="ui-label-label-a11c label"
                for="toggle-button-4"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="toggle-button-4"
                  name="toggle-button-4"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Auto-join for approved email domains
              </label>
            </div>
          </div>
          <div
            class="mb-10"
          >
            <label
              class="ui-label-label-a11c mb-2"
              for="approved-email-domains"
            >
              Approved email domains
              <abbr
                aria-label="required"
                class="ui-label-abbr-a11c"
                title="required"
              >
                *
              </abbr>
            </label>
            <div
              class="InputField form-group"
              color=""
            >
              <div
                class=""
              >
                <textarea
                  class="field form-control"
                  id="approved-email-domains"
                  placeholder="domain.com, mydomain.com"
                  readonly=""
                  rows="1"
                />
              </div>
              <small
                class="form-text text-muted"
              >
                Wildcards allowed (e.g. *.domain.com)
              </small>
            </div>
          </div>
          <div
            class="mt-5 mb-5"
          >
            <h4
              class="mb-2"
            >
              <i
                class="material-icons mr-1"
              >
                lock
              </i>
              Two-Factor Authentication (2FA)
            </h4>
            <p>
              For an added layer of security, you can require your users to use two-factor authentication (2FA) when they sign in to Gorgias.
            </p>
            <div>
              <label
                aria-checked="false"
                class="ui-label-label-a11c label"
                for="twoFAEnforcementToggle"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="twoFAEnforcementToggle"
                  name="twoFAEnforcementToggle"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Require 2FA for all users
              </label>
            </div>
          </div>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Access/> should render with the previously saved settings 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Access management
      </h1>
    </div>
    <div
      class="pageContainer"
    >
      <div
        class="contentWrapper"
      >
        <form
          class=""
        >
          <h4
            class="mb-2"
          >
            Single Sign-On (SSO)
          </h4>
          <p>
            SSO allows agents to access Gorgias using their Google or Microsoft accounts. Once you enable a SSO method, a respective button will appear on the log-in page.
          </p>
          <div
            class="mb-4"
          >
            <div
              class="mb-2"
            >
              <label
                aria-checked="false"
                class="ui-label-label-a11c label"
                for="toggle-button-6"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="toggle-button-6"
                  name="toggle-button-6"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                <img
                  alt="Google logo"
                  class="ml-3 mr-2"
                  src="test-file-stub"
                  style="height: 1.4em;"
                />
                <b>
                  Google
                   SSO
                </b>
              </label>
            </div>
          </div>
          <div
            class="mb-2"
          >
            <label
              aria-checked="false"
              class="ui-label-label-a11c label"
              for="toggle-button-7"
              role="switch"
            >
              <input
                class="input"
                disabled=""
                id="toggle-button-7"
                name="toggle-button-7"
                type="checkbox"
              />
              <div
                class="slider"
              />
              <img
                alt="Microsoft 365 logo"
                class="ml-3 mr-2"
                src="test-file-stub"
                style="height: 1.4em;"
              />
              <b>
                Microsoft 365
                 SSO
              </b>
            </label>
          </div>
          <div
            class="mt-4"
            data-name="box"
            style="flex-direction: column; display: flex;"
          >
            <div
              data-name="box"
              style="flex-direction: column; display: flex;"
            />
          </div>
          <h4
            class="mt-5 mb-2"
          >
            Auto-join helpdesk
          </h4>
          <p
            class="mb-1"
          >
            Allows people with email addresses in the approved email domains to use the link below to sign up.
          </p>
          <p>
            <a
              href="https://acme.gorgias.com/signup"
            >
              https://acme.gorgias.com/signup
            </a>
          </p>
          <div
            class="mb-3"
          >
            <div>
              <label
                aria-checked="true"
                class="ui-label-label-a11c label"
                for="toggle-button-9"
                role="switch"
              >
                <input
                  checked=""
                  class="input"
                  disabled=""
                  id="toggle-button-9"
                  name="toggle-button-9"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Auto-join for approved email domains
              </label>
            </div>
          </div>
          <div
            class="mb-10"
          >
            <label
              class="ui-label-label-a11c mb-2"
              for="approved-email-domains"
            >
              Approved email domains
              <abbr
                aria-label="required"
                class="ui-label-abbr-a11c"
                title="required"
              >
                *
              </abbr>
            </label>
            <div
              class="InputField form-group"
              color=""
            >
              <div
                class=""
              >
                <textarea
                  class="field form-control"
                  id="approved-email-domains"
                  placeholder="domain.com, mydomain.com"
                  rows="3"
                >
                  gorgias.com
gorgias.io
                </textarea>
              </div>
              <small
                class="form-text text-muted"
              >
                Wildcards allowed (e.g. *.domain.com)
              </small>
            </div>
          </div>
          <div
            class="mt-5 mb-5"
          >
            <h4
              class="mb-2"
            >
              <i
                class="material-icons mr-1"
              >
                lock
              </i>
              Two-Factor Authentication (2FA)
            </h4>
            <p>
              For an added layer of security, you can require your users to use two-factor authentication (2FA) when they sign in to Gorgias.
            </p>
            <div>
              <label
                aria-checked="false"
                class="ui-label-label-a11c label"
                for="twoFAEnforcementToggle"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="twoFAEnforcementToggle"
                  name="twoFAEnforcementToggle"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Require 2FA for all users
              </label>
            </div>
          </div>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Access/> should show an error and block submit when using a generic domain 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Access management
      </h1>
    </div>
    <div
      class="pageContainer"
    >
      <div
        class="contentWrapper"
      >
        <form
          class=""
        >
          <h4
            class="mb-2"
          >
            Single Sign-On (SSO)
          </h4>
          <p>
            SSO allows agents to access Gorgias using their Google or Microsoft accounts. Once you enable a SSO method, a respective button will appear on the log-in page.
          </p>
          <div
            class="mb-4"
          >
            <div
              class="mb-2"
            >
              <label
                aria-checked="false"
                class="ui-label-label-a11c label"
                for="toggle-button-21"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="toggle-button-21"
                  name="toggle-button-21"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                <img
                  alt="Google logo"
                  class="ml-3 mr-2"
                  src="test-file-stub"
                  style="height: 1.4em;"
                />
                <b>
                  Google
                   SSO
                </b>
              </label>
            </div>
          </div>
          <div
            class="mb-2"
          >
            <label
              aria-checked="false"
              class="ui-label-label-a11c label"
              for="toggle-button-22"
              role="switch"
            >
              <input
                class="input"
                disabled=""
                id="toggle-button-22"
                name="toggle-button-22"
                type="checkbox"
              />
              <div
                class="slider"
              />
              <img
                alt="Microsoft 365 logo"
                class="ml-3 mr-2"
                src="test-file-stub"
                style="height: 1.4em;"
              />
              <b>
                Microsoft 365
                 SSO
              </b>
            </label>
          </div>
          <div
            class="mt-4"
            data-name="box"
            style="flex-direction: column; display: flex;"
          >
            <div
              data-name="box"
              style="flex-direction: column; display: flex;"
            />
          </div>
          <h4
            class="mt-5 mb-2"
          >
            Auto-join helpdesk
          </h4>
          <p
            class="mb-1"
          >
            Allows people with email addresses in the approved email domains to use the link below to sign up.
          </p>
          <p>
            <a
              href="https://acme.gorgias.com/signup"
            >
              https://acme.gorgias.com/signup
            </a>
          </p>
          <div
            class="mb-3"
          >
            <div>
              <label
                aria-checked="true"
                class="ui-label-label-a11c label"
                for="toggle-button-24"
                role="switch"
              >
                <input
                  checked=""
                  class="input"
                  disabled=""
                  id="toggle-button-24"
                  name="toggle-button-24"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Auto-join for approved email domains
              </label>
            </div>
          </div>
          <div
            class="mb-10"
          >
            <label
              class="ui-label-label-a11c mb-2"
              for="approved-email-domains"
            >
              Approved email domains
              <abbr
                aria-label="required"
                class="ui-label-abbr-a11c"
                title="required"
              >
                *
              </abbr>
            </label>
            <div
              class="InputField form-group"
              color="danger"
            >
              <div
                class=""
              >
                <textarea
                  class="field form-control-danger is-invalid form-control"
                  id="approved-email-domains"
                  placeholder="domain.com, mydomain.com"
                  rows="2"
                >
                  gmail.com
                </textarea>
                <div
                  class="invalid-feedback"
                >
                  Generic domain: gmail.com
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-5 mb-5"
          >
            <h4
              class="mb-2"
            >
              <i
                class="material-icons mr-1"
              >
                lock
              </i>
              Two-Factor Authentication (2FA)
            </h4>
            <p>
              For an added layer of security, you can require your users to use two-factor authentication (2FA) when they sign in to Gorgias.
            </p>
            <div>
              <label
                aria-checked="false"
                class="ui-label-label-a11c label"
                for="twoFAEnforcementToggle"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="twoFAEnforcementToggle"
                  name="twoFAEnforcementToggle"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
                Require 2FA for all users
              </label>
            </div>
          </div>
          <button
            class="btn btn-primary disabled"
            disabled=""
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
